[gd_scene load_steps=2 format=3 uid="uid://ny56rlhje3jx"]

[ext_resource type="Script" uid="uid://cf0vxif5t47oc" path="res://ui/screens/error_screen/error_screen.gd" id="1_31nnk"]

[node name="ErrorScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_31nnk")

[node name="ErrorView" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -25.0
offset_right = 56.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="ErrorText" type="Label" parent="ErrorView"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "error text"
horizontal_alignment = 1

[node name="ErrorMessage" type="Label" parent="ErrorView"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "error message"
horizontal_alignment = 1
